--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,6 @@ button {
   -webkit-text-fill-color: white; /* Will override color (regardless of order) */
   -webkit-text-stroke: 3px black;
 }
+.active{
+  @apply border-amber-500
+}
